--- a/signal-backend/vercel.json
+++ b/signal-backend/vercel.json
@@ -18,6 +18,10 @@
   },
   "rewrites": [
     {
+      "source": "/",
+      "destination": "/index.html"
+    },
+    {
       "source": "/api/(.*)",
       "destination": "/api/$1"
     }
